
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybakong"
version = "0.1.0"
description = "Python SDK for Cambodia Bakong Open API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = ["requests"]
requires-python = ">=3.7"
